# pathml

./: .coverage_others  .coverage_tilestitcher  .coveragerc  .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  CNAME  CONTRIBUTING.rst  Dockerfile  LICENSE  README-Copy1.md  README.md  _config.yml  coverage.xml  docker_entrypoint.sh  environment-dev.yml  environment.yml  environment_cuda.yml  environment_py310.yml  environment_py39.yml  environment_test.yml  environmenttest.yml  index.md  pathml-model-zoo.md  pyproject.toml  setup.py  tma.py  tma_bounding.py
_layouts/: default.html
ai-digital-pathology-assistant-v3/: DESC.txt  INSTRUCTIONS.txt  README.md  STARTERS.txt
docker/: entrypoint.sh
docs/: env_readthedocs.yml  readthedocs-requirements.txt
examples/: Graph_Analysis_NSCLC.ipynb  Graph_Analysis_NSCLC_v2[1].ipynb  InferenceOnnx_tutorial.ipynb  README.md  Untitled.ipynb  UseMagnification.ipynb  advanced_HE_chunks.ipynb  basic_HE.ipynb  cell_degree_norm.pt  construct_graphs.ipynb  h5path.ipynb  hovernet.ipynb  loading_images_vignette.ipynb  multiplex_if.ipynb  nucleus_detection.ipynb  pathml_gallery.ipynb  preprocessing_pipeline.ipynb  quickstart.ipynb  ssl_pilot_preprocessing_copy.ipynb  stain_normalization.ipynb  talk_to_pathml.ipynb  tile_stitching.ipynb  train_hactnet.ipynb  train_hovernet.ipynb  workflow_HE_vignette.ipynb
pathml/: .coverage_others  __init__.py  _logging.py  _version.py  tiles.py  utils.py
requirements/: environment_docker.yml  environment_mac.yml  environment_test.yml  (+1 more)
(+230 files in other folders)
