[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "exclude: marks tests to exclude (deselect with '-m \"not exclude\"')"
]

[tool.isort]
profile = "black"
